// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Match snapshots Column 1 1`] = `
<div
  className="column__ColumnStyled-sc-xt4v4z-0 dzXbhj"
/>
`;

exports[`Match snapshots Column 1/2 1`] = `
<div
  className="column__ColumnStyled-sc-xt4v4z-0 fJIbVv"
/>
`;

exports[`Match snapshots Column 1/3 1`] = `
<div
  className="column__ColumnStyled-sc-xt4v4z-0 boSXwY"
/>
`;

exports[`Match snapshots Column 1/4 1`] = `
<div
  className="column__ColumnStyled-sc-xt4v4z-0 hpFACd"
/>
`;

exports[`Match snapshots Column 1/5 1`] = `
<div
  className="column__ColumnStyled-sc-xt4v4z-0 kkZXBk"
/>
`;

exports[`Match snapshots Column 1/6 1`] = `
<div
  className="column__ColumnStyled-sc-xt4v4z-0 iYiKez"
/>
`;

exports[`Match snapshots Column default 1`] = `
<div
  className="column__ColumnStyled-sc-xt4v4z-0 kMxKQU"
/>
`;
